--- a/package.json
+++ b/package.json
@@ -8,12 +8,10 @@
     "@testing-library/jest-dom": "^5.11.6",
     "@testing-library/react": "^11.2.2",
     "@testing-library/user-event": "^12.6.0",
-    "@types/counterpart": "^0.18.1",
     "@types/jest": "^26.0.19",
     "@types/node": "^12.19.9",
     "@types/react": "^16.14.2",
     "@types/react-dom": "^16.9.10",
-    "@types/react-modal": "^3.12.1",
     "@typescript-eslint/eslint-plugin": "^4.13.0",
     "@typescript-eslint/parser": "^4.13.0",
     "counterpart": "^0.18.6",
@@ -57,5 +55,9 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "@types/counterpart": "^0.18.1",
+    "@types/react-modal": "^3.12.1"
   }
 }
